--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
-[workspace]
-members = [
-    "day01",
-    "day02"
-]
+[package]
+name = "aoc2019"
+version = "0.1.0"
+authors = ["Damon Barry <damonbarry@outlook.com>"]
+edition = "2018"
+
+[dependencies]
+libmath = "0.2.1"
+num = "0.2.0"
